Added Signature verification, and it seems to be working. Had to figure out how to get the encoding/decoding working with the public keys, but I think it seems to be running (for 3 processes)